--- a/index.html
+++ b/index.html
@@ -1,46 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
     <title>Deasfio boas-vindas</title>
-    <style>
-        body {
-            background-color: rgba(128, 128, 128, 0.904);
-        }
-
-        main {
-            display: flex;
-            width: 100%;
-            justify-content: center;
-            align-items: center;
-        }
-
-        h1 {
-            text-align: center;
-            font-family: Arial, Helvetica, sans-serif;
-            color: white;
-            text-shadow: 2px 2px 5px black;
-        }
-
-        button {
-            margin: 10px;
-            padding: 10px 20px;
-            color: white;
-            background-color: rgb(14, 127, 202);
-            border-radius: 100px;
-            box-shadow: 2px 2px 5px black;
-            font-weight: bolder;
-        }
-
-        button:hover {
-            cursor: pointer;
-        }
-    </style>
 </head>
-
 <body>
     <header>
         <h1>Boas-vindas</h1>
@@ -51,28 +18,5 @@
     <section>
         <div></div>
     </section>
-
-    <script>
-        function clicar() {
-            let nome = window.prompt('Qual é o seu nome?')
-            if (nome.length == 0) {
-                alert('Por favor, insira seu nome.')
-            } else {
-                let idade = window.prompt(`Olá, ${nome}! Quantos anos você tem?`)
-                if (idade.length == 0) {
-                    alert('Por favor, insira sua idade.')
-                } else {
-                    let idadeReal = Number(idade)
-                    if (isNaN(idadeReal)) {
-                        alert(`Por favor, insira uma idade correta.`)
-                    } else {
-                        window.alert(`Acabei de conhecer o(a) ${nome}, que tem ${idade} anos de idade!`)
-                    }
-                }
-            }            
-        }
-    </script>
-
 </body>
-
 </html>
